@@ -1,0 +1,7 @@
+<?php
+
+/**
+ * Alter the site meta-data before it's sent to the Solr index.
+ */
+function hook_apachesolr_multisitesearch_metadata_alter($document) {
+}
